first test is completed

--- a/.env-template
+++ b/.env-template
@@ -1,2 +1,2 @@
 TEST_DATAGEN_PG_CONN=postgresql://postgres@localhost:5432/postgres
-TEST_DATAGEN_BIN_PATH=path_to_bin_with_datagen
+TEST_DATAGEN_BIN_PATH=$(PWD)/bin
