disable paralletest for e2e

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -159,6 +159,7 @@ linters:
     rules:
       - linters:
           - cyclop
+          - paralleltest
           - wrapcheck
         path: (.+)_test\.go
     paths:
